fixed smooth scroll on ios

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -12,19 +12,17 @@
   box-shadow: 8px 8px 8px #000000;
 }
 
+.about-text {
+  font-size: 1rem;
+}
+
 @media (max-width: 564px) {
-  .about-text {
-    font-size: 0.8rem;
-  }
   .about-img {
     width: 30vh;
   }
 }
 
 @media (min-width: 768px) {
-  .about-text {
-    font-size: 1rem;
-  }
   .about-img {
     width: 40vh;
   }
