--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 html,
 body {
   width: 100%;
-  padding: 0px;
+  /* removing height fixes chrome nav bar animation */
   overflow-y: auto;
   scroll-behavior: smooth;
+  /* enable smooth scroll on ios and android */
+  -webkit-overflow-scroling: touch; 
 }
 
 @media (max-width: 767px) {
@@ -14,7 +16,6 @@ body {
 }
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
